add all blogs page

--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "base_generic.html" %}
-
+{% block title %}
+<title>Home</title>
+{% endblock %}
 {% block content %}
 <h1>Mini Blog Home</h1>
 
