--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,7 +7,7 @@
 
       {% for post in post_list %}
       <li>
-        <a href="{{ book.get_absolute_url }}">{{ post.title }}</a> ({{post.author}})
+        <a href="{{ post.get_absolute_url }}">{{ post.title }}</a> ({{post.author}})
       </li>
       {% endfor %}
 
